# GeoSentinel-X

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
mlops/docker/: Dockerfile.api  docker-compose.yml
mlops/kubernetes/: deployment.yaml
src/api/: main.py
src/data_pipeline/: features.py  ingest.py  preprocess.py
src/downstream/: change_detect.py  forecasting.py  lulc.py  segmentation.py
src/explainability/: xai_utils.py
src/geollm/: agent.py  prompts.py
src/models/: fusion.py  ssl_objectives.py  vit_branches.py
ui/src/app/: page.tsx
