[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geosentinel-x"
version = "0.1.0"
description = "Foundation Models for Multi-Temporal Earth Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "GeoAI Research Team"},
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "dask>=2023.0.0",
    "xarray>=2023.0.0",
    "zarr>=2.14.0",
    "rasterio>=1.3.0",
    "geopandas>=0.13.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "mlflow>=2.5.0",
    "shap>=0.42.0",
    "transformers>=4.30.0",
    "pystac-client>=0.7.0",
    "planetary-computer>=1.0.0",
    "earthengine-api>=0.1.360",
    "psycopg2-binary>=2.9.0",
    "redis>=4.6.0",
    "celery>=5.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.4",
    "jupyterlab>=4.0"
]
